--- a/Resources/views/Correction/correctionsByUser.html.twig
+++ b/Resources/views/Correction/correctionsByUser.html.twig
@@ -81,6 +81,7 @@
                             )
                             }}
                         {% endif %}
+                    {% endblock %}
                 {% endblock %}
             </div>
 
