--- a/Resources/views/Dropzone/editCommon.html.twig
+++ b/Resources/views/Dropzone/editCommon.html.twig
@@ -181,8 +181,10 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a id="acitvate_manualStateAutoClose" href="#" class="btn btn-success">{{ 'yes'|trans({},'icap_dropzone') }}</a>
-                    <a href="#" class="btn btn-default" data-dismiss="modal">{{ 'no'|trans({},'icap_dropzone') }}</a>
+                    <a href="#" class="btn btn-default"
+                       data-dismiss="modal">{{ 'Do nothing'|trans({},'icap_dropzone') }}</a>
+                    <a id="acitvate_manualStateAutoClose" href="#"
+                       class="btn btn-success">{{ 'Validate copies'|trans({},'icap_dropzone') }}</a>
                 </div>
             </div>
         </div>
