--- a/Resources/views/Dropzone/confirmCloseUnterminatedDrop.html.twig
+++ b/Resources/views/Dropzone/confirmCloseUnterminatedDrop.html.twig
@@ -13,10 +13,10 @@
             <div class="col-md-4 col-md-offset-6 "></div>
             <a id="acitvate_manualStateAutoClose"
                href="{{ path('icap_dropzone_drops_awaiting',{'resourceId':dropzone.id}) }}"
-               class="btn btn-default">{{ 'Cancel'|trans({},'icap_dropzone') }}</a>
+               class="btn btn-default">{{ 'Do nothing'|trans({},'icap_dropzone') }}</a>
             <a id="form-submit" class="btn btn-primary"
                href="{{ path('icap_dropzone_auto_close_drops',{'resourceId':dropzone.id}) }}">
-                {{ 'Validate'|trans({}, 'icap_dropzone') }}
+                {{ 'Validate copies'|trans({}, 'icap_dropzone') }}
             </a>
         </div>
     </div>
