--- a/Resources/views/Drop/dropsAwaiting.html.twig
+++ b/Resources/views/Drop/dropsAwaiting.html.twig
@@ -26,6 +26,11 @@
             </ul>
         </div>
     </div>
+
+    {% include 'IcapDropzoneBundle:Drop:peerReviewHelper.html.twig' %}
+
+
+
     <h3>{{ 'Awaiting for correction copies'|trans({}, 'icap_dropzone') }}</h3>
 
     <div class="container row">
