--- a/Resources/views/Drop/Listing/examinersListing.html.twig
+++ b/Resources/views/Drop/Listing/examinersListing.html.twig
@@ -13,7 +13,7 @@
                     <div class="popoverItem" data-toggle="popover" data-placement="top"
                          data-content="{{ 'corrections_denied'|trans({}, 'icap_dropzone')|raw }}">{{ 'was reported'|trans({},'icap_dropzone') }}</div>
                 </th>
-                <th>{{'tools'|trans({},'icap_dropzone')}}</th>
+                {# <th>{{'tools'|trans({},'icap_dropzone')}}</th>#}
             </thead>
             <tbody>
 
@@ -25,32 +25,33 @@
 {#                 <td>
                     {{ attribute(usersAndCorrectionCount, user.id).userDropCount }}
                 </td> #}
-                <td>
-                   {{ attribute(usersAndCorrectionCount, user.id).correction_count }}
-                </td>   
-                <td>
-                   {{ attribute(usersAndCorrectionCount, user.id).correction_finishedCount }} / {{ dropzone.expectedTotalCorrection }}
-                </td>   
+                <td class="{% if attribute(usersAndCorrectionCount, user.id).correction_count <   dropzone.expectedTotalCorrection %}warning{% endif %}">
+                {{ attribute(usersAndCorrectionCount, user.id).correction_count }}
+                </td>
+                <td class="{% if attribute(usersAndCorrectionCount, user.id).correction_finishedCount <   dropzone.expectedTotalCorrection %}warning{% endif %}">
+                    {{ attribute(usersAndCorrectionCount, user.id).correction_finishedCount }}
+                    / {{ dropzone.expectedTotalCorrection }}
+                </td>
                 <td>
                    {{ attribute(usersAndCorrectionCount, user.id).correction_reportCount }} / {{ attribute(usersAndCorrectionCount, user.id).correction_count }}
                 </td> 
                 <td >
                    {{ attribute(usersAndCorrectionCount, user.id).correction_deniedCount }} / {{ attribute(usersAndCorrectionCount, user.id).correction_count }}
                 </td>
-               
-                <td>
-                    <div class="btn-group ">
-                        {#
-                        <a href="#" type="button" class="btn btn-default btn-xs">{{ 'See user s correction'|trans({}, 'icap_dropzone') }}</a> 
-                        #}
-                       {#
-                        {%  if AwaitingMode is defined and  AwaitingMode == true %}
-                            <a href="{{ path('icap_dropzone_drops_detail_add_correction', {'resourceId': dropzone.id, 'dropId': drop.id}) }}" type="button" class="btn btn-default btn-xs">{{ 'Add a correction'|trans({}, 'icap_dropzone') }}</a>
-                        {% endif %}
-                        <a href="{{ path('icap_dropzone_drops_delete', {'resourceId': dropzone.id, 'dropId': drop.id, 'tab': 0, 'page': pager.currentPage}) }}" class="btn btn-danger btn-xs launch-modal"><span class="glyphicon icon-trash"></span> {{ 'Delete copy'|trans({}, 'icap_dropzone') }}</a>
-                         #}
-                    </div>
-                </td>
+
+                {#              <td>
+                                  <div class="btn-group ">
+                                      &#123;&#35;
+                                      <a href="#" type="button" class="btn btn-default btn-xs">{{ 'See user s correction'|trans({}, 'icap_dropzone') }}</a>
+                                      &#35;&#125;
+                                     &#123;&#35;
+                                      {%  if AwaitingMode is defined and  AwaitingMode == true %}
+                                          <a href="{{ path('icap_dropzone_drops_detail_add_correction', {'resourceId': dropzone.id, 'dropId': drop.id}) }}" type="button" class="btn btn-default btn-xs">{{ 'Add a correction'|trans({}, 'icap_dropzone') }}</a>
+                                      {% endif %}
+                                      <a href="{{ path('icap_dropzone_drops_delete', {'resourceId': dropzone.id, 'dropId': drop.id, 'tab': 0, 'page': pager.currentPage}) }}" class="btn btn-danger btn-xs launch-modal"><span class="glyphicon icon-trash"></span> {{ 'Delete copy'|trans({}, 'icap_dropzone') }}</a>
+                                       &#35;&#125;
+                                  </div>
+                              </td>#}
             </tr>
         {% endfor %}
             </tbody>
