--- a/Resources/views/Drop/dropsByBase.html.twig
+++ b/Resources/views/Drop/dropsByBase.html.twig
@@ -45,7 +45,11 @@
         {% endblock %}
     </div>
 
-     <h3>{% block dropzone_content_drops_by_list_title %}{{ 'fully corrected copies'|trans({}, 'icap_dropzone') }}{% endblock %}</h3>
+    <div>
+        {% block dropzone_content_drops_by_beforeTitle %}
+        {% endblock %}
+    </div>
+    <h3>{% block dropzone_content_drops_by_list_title %}{{ 'fully corrected copies'|trans({}, 'icap_dropzone') }}{% endblock %}</h3>
      <h5>{% block dropzone_content_drops_by_list_subtitle %}{% endblock %}</h5>
 
     {% block dropzone_content_drops_by_Listing %}
