--- a/Resources/views/Correction/correctionsByUser.html.twig
+++ b/Resources/views/Correction/correctionsByUser.html.twig
@@ -72,7 +72,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         {% block dropzone_content_drops_by_no_result_exception %}
-                            {{ 'noCopyExpectedCorrection'|transchoice(dropzone.expectedTotalCorrection, {}, 'icap_dropzone') }}
+                            {{ 'noCorrectionExeption'|trans( {}, 'icap_dropzone') }}
                         {% endblock %}
                     </div>
                 </div>
