--- a/Resources/views/Dropzone/editCommon.html.twig
+++ b/Resources/views/Dropzone/editCommon.html.twig
@@ -48,18 +48,21 @@
 
             {{ form_row(form.peerReview, {'label_attr': {'style': 'display: none;'}}) }}
 
-            <div class="col-lg-offset-3 col-lg-9 peer-review-options">
-                <div id="expected-total-correction-explication" class="col-lg-8 control-label" style="text-align: left;" data-toggle="popover" data-placement="bottom" data-content="{{ 'expected_total_correction'|trans({}, 'icap_dropzone')|raw }}">
+            <div class="col-sm-offset-3 col-lg-9 peer-review-options">
+            <div id="expected-total-correction-explication" class="col-lg-8 control-label" style="text-align: left;" data-toggle="popover" data-placement="bottom" data-content="{{ 'expected_total_correction'|trans({}, 'icap_dropzone')|raw }}">
                     <span class="glyphicon icon-question-sign"></span> {{ 'Expected total correction'|trans({}, 'icap_dropzone') }}
                 </div>
                 {{ form_row(form.expectedTotalCorrection, {'input_col_size': 'col-lg-4', 'label_col_size': '', 'attr': {'style': 'width: 60px;'}, 'label_attr': {'style': 'display: none;'}}) }}
             </div>
-            <div class="col-lg-offset-2 peer-review-options">
-            {{ form_row(form.diplayCorrectionsToLearners, {'label_attr': { 'style': 'font-weight: normal;'}}) }}
+            <div class="col-sm-offset-3 peer-review-options">
+                <div class='col-lg-8' style="text-align: left;">
+                    {{ form_row(form.diplayCorrectionsToLearners, {'label_attr': { 'style': 'font-weight: normal;' }})
+                    }}
+                </div>
             </div>
-            <div class="col-lg-offset-2 ">
-                <div id='allow-correction-deny' class='col-lg-8' style="text-align: left;" >
-                    {{ form_row(form.allowCorrectionDeny, {'label_attr': { 'style': 'font-weight: normal;'}}) }}
+            <div class="col-sm-offset-4 ">
+                <div id='allow-correction-deny' class='col-lg-8'>
+                {{ form_row(form.allowCorrectionDeny, {'label_attr': { 'style': 'font-weight: normal;'}}) }}
                 </div>
             </div>
         </div>
