--- a/Resources/views/Dropzone/editCommon.html.twig
+++ b/Resources/views/Dropzone/editCommon.html.twig
@@ -122,7 +122,10 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2">
-                    {{ form_row(form.autoCloseOpenedDropsWhenTimeIsUp,{'label_attr': {'class': 'control-label', 'style': 'font-weight: normal;'}}) }}
+                    {{ form_row(form.autoCloseOpenedDropsWhenTimeIsUp,{'label_attr': {'class': 'control-label  popoverItem', 'style': 'font-weight: normal;',
+                    'data-toggle':'popover','data-placement':'top','data-content': 'dropzone_startedNotValidatedYet_infos'|trans({}, 'icap_dropzone')|raw }}
+                    ) }}
+
                 </div>
             </div>
             <div class="form-group">
@@ -203,7 +206,7 @@
     <script>
         $('document').ready(function() {
 
-            $('#expected-total-correction-explication').popover({
+            $('#expected-total-correction-explication, .popoverItem').popover({
                 'trigger': 'hover',
                 'html': true
             });
