--- a/Resources/views/Drop/Listing/dropsListing.html.twig
+++ b/Resources/views/Drop/Listing/dropsListing.html.twig
@@ -2,7 +2,7 @@
     <table class="table   table-striped table-hover  ">
         <thead>
         <th>{{ 'Established on'|trans({}, 'icap_dropzone') }}</th>
-        <th>{{ 'user'|trans({},'icap_dropzone') }}</th>
+        <th>{{ 'Made by'|trans({},'icap_dropzone') }}</th>
         <th>{{ 'Last correction'|trans({}, 'icap_dropzone') }}</th>
         <th>{{ 'Grade'|trans({}, 'icap_dropzone') }}</th>
         {% if AwaitingMode is defined and  AwaitingMode == true %}
