--- a/Resources/views/Drop/drop.html.twig
+++ b/Resources/views/Drop/drop.html.twig
@@ -126,45 +126,28 @@
     <script language="javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 
-    <script type="text/javascript" src="{{ asset('bundles/frontend/underscore/underscore-1.3.3.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/frontend/backbone/backbone-0.9.2.min.js') }}"></script>
     <script type='text/javascript' src='{{ asset('bundles/frontend/jquery/jquery-ui-1.9.2/jquery-ui-1.9.2.js') }}' ></script>
-    <script type="text/javascript" src="{{ asset('bundles/clarolinecore/js/resource/manager.js') }}"></script>
-
     <script src="{{ asset('bundles/icapdropzone/js/popup.js') }}"></script>
+
     <script>
         tinymce.claroline.configuration.toolbar1 = 'bold italic strikethrough | alignleft aligncenter alignright alignjustify | ';
         $(document).ready(function () {
-
             var resourceNodeId = null;
-            var callBack = function(nodes){
-                //console.log('callback custom pour document');
-                var id = _.keys(nodes)[0];
-                var name = nodes[_.keys(nodes)][0];
-                var resourceTypes = nodes[_.keys(nodes)][1];
-                var nodeId = _.keys(nodes)[0];
-                var mimeType = nodes[_.keys(nodes)][2];
 
-                resourceNodeId = nodeId;
-                $('.dropzone_ressrouceSelected').show();
-                $('.dropzone_noRessourceSelected').hide();
-                $('.selected-resource').html(name);
-                $('#icap_dropzone_document_file_form_resource').val(resourceNodeId);
+            Claroline.ResourceManager.createPicker('dropPicker', {
+                callback: function (nodes) {
+                    resourceNodeId = _.keys(nodes)[0];
+                    $('.dropzone_ressrouceSelected').show();
+                    $('.dropzone_noRessourceSelected').hide();
+                    $('.selected-resource').html(name);
+                    $('#icap_dropzone_document_file_form_resource').val(resourceNodeId);
 
-                $('#add-document-sumbit').removeAttr('disabled');
-                $('#add-document-sumbit').trigger('click');
+                    $('#add-document-sumbit').removeAttr('disabled');
+                    $('#add-document-sumbit').trigger('click');
 
-                $('.add-document-pending').hide();
-            };
-
-            var config = {% include 'ClarolineCoreBundle:Resource:init.html.twig' %};
-            config.parentElement = $('#picker-wrapper');
-            config.isPickerMultiSelectAllowed = false;
-            config.isPickerOnly = true;
-            config.pickerCallback = function (nodes) {
-                callBack(nodes);
-            }
-            Claroline.ResourceManager.initialize(config);
+                    $('.add-document-pending').hide();
+                }
+            });
 
             if ($('#icap_dropzone_document_file_form_file').val() != '') {
                 $('.please-wait').show();
@@ -196,7 +179,7 @@
                         $('.show-during-add').show();
 
                         if (launchResourcePicker) {
-                            Claroline.ResourceManager.picker('open');
+                            Claroline.ResourceManager.picker('dropPicker');
 
                             $('#modal-picker').on('hidden.bs.modal', function () {
                                 console.log('hidden modal');
@@ -218,7 +201,7 @@
             $('#addRessourceButton').click(function(e)
             {
                 e.preventDefault();
-                Claroline.ResourceManager.picker('open');
+                Claroline.ResourceManager.picker('dropPicker');
                 $('#modal-picker').unbind('hidden.bs.modal').on('hidden.bs.modal', function () {
                     console.log('hidden modal');
                     if (resourceNodeId == null) {
