Correct tinyMce init

--- a/Resources/views/Dropzone/editCommon.html.twig
+++ b/Resources/views/Dropzone/editCommon.html.twig
@@ -201,6 +201,7 @@
 
 {% block javascripts %}
     {{ parent() }}
+    {{ tinymce_init() }}
     <script>
         $('document').ready(function() {
 
